--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,12 +1,15 @@
-name: Pushlish to Docker
+name: Publish to Docker
 on:
   push:
-    branches: [ master ]
+    branches: [ master, docker-publish ]
   pull_request:
     branches: [ master ]
 
 jobs:
   build:
-    name: Checkout Repository
-    uses: actions/checkout@v2
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
