--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -13,3 +13,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ github.ref_name }} -f Dockerfile .
+
+      - name: Login to Container Registry
+        run: |
+          echo ${{ github.token }} | docker login -u ${{ github.user }} https://gchr.io --password-stdin
+
+      - name: Push to Container Registry
+        run: |
+          echo 'TODO: push'
+
