--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ github.ref_name }} -f Dockerfile .
+          docker build -t ghcr.io/github/pages-gem:${{ github.ref_name }} -f Dockerfile .
 
       - name: Push to Container Registry
         run: |
