--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,12 +1,21 @@
 name: Publish to Docker
 on:
   push:
+    # TODO: remove docker-publish
     branches: [ master, docker-publish ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ master ]
+ 
+env:
+  DOCKER_TAG_IMAGE: "ghcr.io/github/pages-gem"
+  DOCKER_TAG_LABEL: ${{ github.ref_name }}
 
 jobs:
   build:
+    env:
+      DOCKER_TAG: ${{ env.DOCKER_TAG_IMAGE }}:${{ env.DOCKER_TAG_LABEL }}
+
     runs-on: ubuntu-latest
 
     steps:
@@ -15,10 +24,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ghcr.io/github/pages-gem:${{ github.ref_name }} -f Dockerfile .
+          docker build -t ${{ env.DOCKER_TAG }} -f Dockerfile .
 
       - name: Push to Container Registry
         run: |
-          echo ${{ github.token }} | docker login -u ${{ github.actor }} https://gchr.io --password-stdin
-          echo 'TODO: push'
+          echo ${{ github.token }} | docker login -u ${{ github.actor }} https://ghcr.io --password-stdin
+          docker push ${{ env.DOCKER_TAG }}
 
