Remove aggregated DOCKER_TAG due to Action syntax limitations.

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -13,9 +13,6 @@ env:
 
 jobs:
   build:
-    env:
-      DOCKER_TAG: ${{ env.DOCKER_TAG_IMAGE }}:${{ env.DOCKER_TAG_LABEL }}
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,10 +21,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_TAG }} -f Dockerfile .
+          docker build -t ${{ env.DOCKER_TAG_IMAGE }}:${{ env.DOCKER_TAG_LABEL }} -f Dockerfile .
 
       - name: Push to Container Registry
         run: |
           echo ${{ github.token }} | docker login -u ${{ github.actor }} https://ghcr.io --password-stdin
-          docker push ${{ env.DOCKER_TAG }}
+          docker push ${{ env.DOCKER_TAG_IMAGE }}:${{ env.DOCKER_TAG_LABEL }}
 
